----------
v4.1.0-git
----------



-----------
v4.1.0beta1
-----------

[jan] Add CalDAV server support (Request #4267).
[jan] Update design to closer match the Horde 5 UI.


------
v4.0.2
------

[mjr] Fix closing the quick task dialog when cancel is pressed (Bug #11848).
[mjr] Fix displaying and editing tasks from search results (Bug #11847).
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[mjr] Fix incoming task sync with certain combinations of due date values.
[mjr] Fix quick task addition without session cookies enabled (Bug #11875,
      Thomas Jarosch <thomas.jarosch@intra2net.com>).
[jan] Fix editing tasks from the merged list view in smartmobile mode (Bug
      #11840).
[jan] Use default Kolab folder for default taks list preference.
[jan] Mark Kolab folder as default when changing default task list preference.


------
v4.0.1
------

[jan] Use Kolab modification and creation dates in the UI (Bug #11591).
[gwr] Ignore empty dates (Bug #11736).
[jan] Use encoded UIDs as IDs in Kolab driver.
[mjr] Fix support for due/start dates for certain ActiveSync clients (Bug
      #11693).
[jan] Fix importing tasks from iCalendar (Bug #11681).
[jan] Fix listing of recurring tasks via timeobjects API.


------
v4.0.0
------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).


---------
v4.0.0RC1
---------

[jan] Fix export links for tasklists (Bug #11576).
[mjr] Fix various issues with importing CSV files.
[mjr] Format datetime fields when exporting a task as a hash (Bug #11537).
[jan] Fix retrieving tasks from Kolab backend by UID (Bug #11532).
[jan] Fix toggling tasklists (Bug #11511).
[jan] Fix listing tasks from Kolab backends.
[jan] Fix sending alarm e-mail messages.


-----------
v4.0.0beta2
-----------

[jan] Synchronize tags with Kolab categories.
[mjr] Fix deleting tasks from the task form.
[mjr] Implement Purge Completed Tasks LoginTask (Request #2520).